--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
   <meta name="description" content="Your description">
 	<meta name="keywords" content="Your,Keywords">
 	<meta name="author" content="">
@@ -25,7 +25,7 @@
 	<!--[if IE]><link rel="stylesheet" href="css/ie-style.css"><![endif]-->
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="#">
+	<!--<link rel="shortcut icon" href="#">-->
 </head>
 <body>
   <app-root>Loading...</app-root>
